Commit ASRIG + 로그인, 회원정보 관리 + include를 이용해 중복 제거 - 불필요한 파일제거
[SourceTree]

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,18 @@
 			<artifactId>jquery</artifactId>
 			<version>3.5.1</version>
 		</dependency>
-		
+		<!-- H2 데이터베이스 -->
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+		</dependency>
+		<!-- Spring boot Starter DATA JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
