--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.url=jdbc:h2:~/Springboot_Study;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_E
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mustache.expose-session-attributes=true
