--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mustache.expose-session-attributes=true
+
+spring.mvc.hiddenmethod.filter.enabled=true
